Updated about page and my bio. Updated a couple avatars.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ authors:
   marko:
     name: Marko
     display_name: Marko
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    avatar: 'assets/images/marko.JPG'
     email: markosterbentz@u.northwestern.edu
     description: "Computer Science PhD Student at Northwestern University"
   andong:
@@ -29,8 +29,7 @@ authors:
   andongmarko:
     name: Andong and Marko
     display_name: Andong and Marko
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: markosterbentz@u.northwestern.edu
+    avatar: 'assets/images/logo.png'
     description: "Computer Science PhD Students at Northwestern University"
 
 # Plugins
