added paper links

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ authors:
   andong:
     name: Andong
     display_name: Andong    
-    avatar: 'assets/images/avatar.png'
+    avatar: 'assets/images/andong.jpg'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: andonglizhao2024@u.northwestern.edu
     description: "Computer Science PhD Student at Northwestern University"
